edit button tag id and create intro page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 	</head>
 	<body class="background">
 		<h1 id="title"> 끝.말.잇.기. </h1>
-		<div class="word_space"></div>
-		<div class="input">
-			<input type="text" class='textbox'>
-			<button class="btn btn-success btn_submit'"> submit </button>	
+
+		<div id="intro">
+			 <button id='introBtn' class='btn btn-success btn_submit'> START </button>
 		</div>
-		
+
+		<div id="main">
+			<div class="word_space"></div>
+			<div class="input">
+				<input type="text" class='textbox'>
+				<button id='mainBtn' class="btn btn-dark btn_submit"> submit </button>	
+			</div>
+	
+		</div>
+				
 
 		<script src="logic.js"></script>
 
