add Enter Key event and create count word function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 		<div id="main">
 			<div class="word_space"></div>
+			<div class="cnt">Count Word : 0</div>
 			<div class="input">
 				<input type="text" class='textbox'>
 				<button id='mainBtn' class="btn btn-dark btn_submit"> submit </button>	
